--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             </div>
 
             <address class="address footer-link">
-              1247/Plot No. 39, 15th Phase, Colony, Kukatpally, Hyderabad
+              1205 Uttora, Dhaka, Bangladesh
             </address>
           </li>
 
@@ -636,9 +636,9 @@
             </div>
 
             <div>
-              <a href="tel:18001213637" class="footer-link">1800-121-3637</a>
+              <a href="tel:18001213637" class="footer-link">+8801644979237</a>
 
-              <a href="tel:+915552348765" class="footer-link">+91 555 234-8765</a>
+              <a href="tel:+915552348765" class="footer-link">+8801796896997</a>
             </div>
           </li>
 
